--- a/hw25_10(2)/style.css
+++ b/hw25_10(2)/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;600&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -11,42 +13,48 @@ body,
 body {
     display: flex;
     justify-content: center;
+    font-family: 'Noto Sans', sans-serif;
 }
 :root {
-    --main-color: rgb(19, 122, 103);
+    --main-color: rgb(85 170 150);
 }
 .wrapper {
     width: 1024px;
     display: grid;
     grid-template-rows: 100px auto 200px;
+    padding:  0 30px;
 }
- 
+ a {
+    text-decoration: none;
+    color: black;
+ }
 .menu_links {
-   color: black;
-   text-decoration: none;
    display: flex;
-}
-a {
-    flex:1;
+   justify-content: space-between;
+   gap: 10px;
+   margin-top: 20px;
+   align-items: center;
 }
 
 .menu_links--get_started {
     background-color: var(--main-color) ;
     border-radius: 20px ;
     border-style: none;
-    padding: 20px 30px;
+    padding: 15px 30px;
     color: white;
-    
+
 }
 .main {
     display: flex;
 } 
 .main_information {
-    flex: 3;
+    flex: 1;
 }
 .main_img {
-    flex: 3; 
-    height: 400px;
+    display: flex;
+    justify-content: center;
+    height: 450px;
+    width: 600px;
 }
 .menu {
    display: flex;
@@ -65,10 +73,73 @@ a {
 }
 .footer_container {
     flex: 1;
-    aspect-ratio: 2/1;
     background-color: rgb(249, 250, 250);
-    border-style: inset;
-    border-radius: 20px;
+    border-style: none;
+    border-radius: 30px;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+.menu_logo-img {
+   height: 50px;
+   width: 150px;
+}
+h1 {
+    font-size: 4rem;
+    line-height: 3.5rem;
+    font-weight: bold;
+}
+.main_information-text {
+    color: rgb(128, 127, 127);
+    display: block;
+    margin-block-start: 2.5rem;
+    margin-block-end: 3rem;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+.main_information-icons {
 
+    display: flex;
+    justify-content: space-between;
+    border-style: none;
+    color: white;
+    
+}
+.main_information-icons a {
+color: white;
 
+}
+.main_media {
+   font-size: 1.5rem;
+   display: flex;
+   width: 40%;
+   justify-content: space-between;
+   margin-top: 30px;
+}
+.main_media a {
+    padding: 5px;
+    border: 1px solid black;
+    border-radius: 50%;
+   height: 40px;
+   width: 40px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+
+}
+.button {
+    background-color: rgb(18, 18, 18) ;
+    border-radius: 20px ;
+    padding: 15px 30px;
+}
+.footer_container img {
+    height: 50px;
+}
+.footer_container h2 {
+    font-size: 1rem;
+    font-weight: 900;
+    padding: 10px;
+}
+.footer_container p {
+    color: rgb(128, 127, 127);
+    padding: 10px;
 }
