--- a/hw25_10(2)/style.css
+++ b/hw25_10(2)/style.css
@@ -1,145 +1,175 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;600&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box; 
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 html,
 body,
-.wrapper{
-   height: 100%;
+.wrapper {
+  height: 100%;
 }
 body {
-    display: flex;
-    justify-content: center;
-    font-family: 'Noto Sans', sans-serif;
+  display: flex;
+  justify-content: center;
+  font-family: "Noto Sans", sans-serif;
 }
 :root {
-    --main-color: rgb(85 170 150);
+  --main-color: rgb(85 170 150);
 }
 .wrapper {
-    width: 1024px;
-    display: grid;
-    grid-template-rows: 100px auto 200px;
-    padding:  0 30px;
+  width: 1024px;
+  display: grid;
+  grid-template-rows: 100px auto 200px;
+  padding: 0 30px;
 }
- a {
-    text-decoration: none;
-    color: black;
- }
+a {
+  text-decoration: none;
+  color: black;
+}
 .menu_links {
-   display: flex;
-   justify-content: space-between;
-   gap: 10px;
-   margin-top: 20px;
-   align-items: center;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  margin-top: 20px;
+  align-items: center;
 }
 
 .menu_links--get_started {
-    background-color: var(--main-color) ;
-    border-radius: 20px ;
-    border-style: none;
-    padding: 15px 30px;
-    color: white;
-
+  background-color: var(--main-color);
+  border-radius: 20px;
+  border-style: none;
+  padding: 15px 30px;
+  color: white;
 }
 .main {
-    display: flex;
-} 
+  display: flex;
+}
 .main_information {
-    flex: 1;
+  flex: 1;
 }
 .main_img {
-    display: flex;
-    justify-content: center;
-    height: 450px;
-    width: 600px;
+  display: flex;
+  justify-content: center;
+  height: 450px;
+  width: 600px;
 }
 .menu {
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .menu_logo {
-    font-size: 25px;
-    font-weight: bold;
-    justify-content: start;
+  font-size: 25px;
+  font-weight: bold;
+  justify-content: start;
 }
 .footer {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
 }
 .footer_container {
-    flex: 1;
-    background-color: rgb(249, 250, 250);
-    border-style: none;
-    border-radius: 30px;
-    padding: 20px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  flex: 1;
+  background-color: rgb(249, 250, 250);
+  border-style: none;
+  border-radius: 30px;
+  padding: 20px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 .menu_logo-img {
-   height: 50px;
-   width: 150px;
+  height: 50px;
+  width: 150px;
 }
 h1 {
-    font-size: 4rem;
-    line-height: 3.5rem;
-    font-weight: bold;
+  font-size: 4rem;
+  line-height: 3.5rem;
+  font-weight: bold;
 }
 .main_information-text {
-    color: rgb(128, 127, 127);
-    display: block;
-    margin-block-start: 2.5rem;
-    margin-block-end: 3rem;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+  color: rgb(128, 127, 127);
+  display: block;
+  margin-block-start: 2.5rem;
+  margin-block-end: 3rem;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
 .main_information-icons {
-
-    display: flex;
-    justify-content: space-between;
-    border-style: none;
-    color: white;
-    
+  display: flex;
+  justify-content: space-between;
+  border-style: none;
+  color: white;
 }
 .main_information-icons a {
-color: white;
-
+  color: white;
 }
 .main_media {
-   font-size: 1.5rem;
-   display: flex;
-   width: 40%;
-   justify-content: space-between;
-   margin-top: 30px;
+  font-size: 1.5rem;
+  display: flex;
+  width: 40%;
+  justify-content: space-between;
+  margin-top: 30px;
 }
 .main_media a {
-    padding: 5px;
-    border: 1px solid black;
-    border-radius: 50%;
-   height: 40px;
-   width: 40px;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-
+  padding: 5px;
+  border: 1px solid black;
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .button {
-    background-color: rgb(18, 18, 18) ;
-    border-radius: 20px ;
-    padding: 15px 30px;
+  background-color: rgb(18, 18, 18);
+  border-radius: 20px;
+  padding: 15px 30px;
 }
 .footer_container img {
-    height: 50px;
+  height: 50px;
 }
 .footer_container h2 {
-    font-size: 1rem;
-    font-weight: 900;
-    padding: 10px;
+  font-size: 1rem;
+  font-weight: 900;
+  padding: 10px;
 }
 .footer_container p {
-    color: rgb(128, 127, 127);
+  color: rgb(128, 127, 127);
+  padding: 10px;
+}
+@media (max-width: 768px) {
+  
+  .wrapper {
+    min-height: 100%;
+    min-width: 50px;
     padding: 10px;
+  }
+  .menu_logo-img{
+    height: 30px;
+    width: 90px;
+  }
+
+  h1 {
+    font-size: 30px;
+    line-height: 35px;
+  }
+  .main_img{
+    height: 270px;
+    padding-right: 215px;
+    flex: ;
+  }
+} .footer{
+display: grid;
+}
+.main{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.footer_container {
+ ;
 }
